; ModuleID = '/home/carl/AnghaBench/winfile/src/extr_suggest.c_FormatSuggest.c'
source_filename = "/home/carl/AnghaBench/winfile/src/extr_suggest.c_FormatSuggest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR_INVALID_ORDINAL = common dso_local global i32 0, align 4
@adwSuggest = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @FormatSuggest(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i32* null, i32** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %43

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  switch i32 %10, label %13 [
    i32 136, label %11
    i32 129, label %11
    i32 131, label %11
    i32 130, label %11
    i32 133, label %11
    i32 134, label %11
    i32 132, label %11
    i32 128, label %11
    i32 135, label %11
  ]

11:                                               ; preds = %9, %9, %9, %9, %9, %9, %9, %9, %9
  %12 = load i32, i32* @ERROR_INVALID_ORDINAL, align 4
  store i32 %12, i32* %3, align 4
  br label %13

13:                                               ; preds = %9, %11
  store i64 0, i64* %5, align 8
  br label %14

14:                                               ; preds = %37, %13
  %15 = load i32**, i32*** @adwSuggest, align 8
  %16 = load i64, i64* %5, align 8
  %17 = getelementptr inbounds i32*, i32** %15, i64 %16
  %18 = load i32*, i32** %17, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 0
  %20 = load i32, i32* %19, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %40

22:                                               ; preds = %14
  %23 = load i32**, i32*** @adwSuggest, align 8
  %24 = load i64, i64* %5, align 8
  %25 = getelementptr inbounds i32*, i32** %23, i64 %24
  %26 = load i32*, i32** %25, align 8
  %27 = getelementptr inbounds i32, i32* %26, i64 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* %3, align 4
  %30 = icmp eq i32 %28, %29
  br i1 %30, label %31, label %36

31:                                               ; preds = %22
  %32 = load i32**, i32*** @adwSuggest, align 8
  %33 = load i64, i64* %5, align 8
  %34 = getelementptr inbounds i32*, i32** %32, i64 %33
  %35 = load i32*, i32** %34, align 8
  store i32* %35, i32** %4, align 8
  br label %40

36:                                               ; preds = %22
  br label %37

37:                                               ; preds = %36
  %38 = load i64, i64* %5, align 8
  %39 = add i64 %38, 1
  store i64 %39, i64* %5, align 8
  br label %14

40:                                               ; preds = %31, %14
  br label %41

41:                                               ; preds = %40
  %42 = load i32*, i32** %4, align 8
  store i32* %42, i32** %2, align 8
  br label %43

43:                                               ; preds = %41, %8
  %44 = load i32*, i32** %2, align 8
  ret i32* %44
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
